--- a/reeltok.docker/docker-compose.yml
+++ b/reeltok.docker/docker-compose.yml
@@ -16,33 +16,7 @@ services:
       - traefik
       - backend
 
-  cloudflared:
-    image: cloudflare/cloudflared:latest
-    container_name: cloudflared
-    command: tunnel --no-autoupdate run
-    restart: unless-stopped
-    environment:
-      - "TUNNEL_TOKEN=${CLOUDFLARE_TUNNEL_TOKEN}"
-    networks:
-      - traefik
-  
-  frontend:
-    build: 
-      context: .
-      dockerfile: Dockerfile.frontend
-    container_name: expo-client
-    ports:
-      - "8081:8081"
-    environment:
-      - NODE_ENV=production
-    networks:
-      - backend
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.expo.rule=Host(`reeltok.site`)"
-      - "traefik.http.routers.expo.entrypoints=web"
-      - "traefik.http.services.expo.loadbalancer.server.port=8081"
- 
+   
   mssql:
     image: mcr.microsoft.com/mssql/server:2022-latest
     build:
@@ -142,6 +116,11 @@ services:
       - "traefik.enable=true"
       - "traefik.http.routers.api-gateway.rule=Host(`api.reeltok.site`)"
       - "traefik.http.routers.api-gateway.entrypoints=web"
+      - "traefik.http.middlewares.api-gateway.headers.accesscontrolallowmethods=GET,OPTIONS,PUT,POST,DELETE"
+      - "traefik.http.middlewares.api-gateway.headers.accesscontrolallowheaders=*"
+      - "traefik.http.middlewares.api-gateway.headers.accesscontrolalloworiginlist=https://reeltok.site,http://localhost:8081"
+      - "traefik.http.middlewares.api-gateway.headers.accesscontrolmaxage=100"
+      - "traefik.http.middlewares.api-gateway.headers.addvaryheader=true"
     networks:
       - traefik
       - backend
